# MacRAG

./: CMakeLists.txt  cerebro.db
src/: Create_Database.cpp  Database_Functions.h  Directory_Functions.h  Directory_Scan.cpp  main.cpp
src/tests/: Test_Directory_Functions.cpp
